# yatta

./: .gitignore  Makefile  README.md  example.py  package-lock.json  package.json  pyproject.toml
example/: example.ipynb  example.py
tests/: cli.py  conftest.py  simple.csv  test_core.py  test_server.py  testconf.py
yatta/: cli.py  utils.py
yatta/base/: __init__.py  textbox.py
yatta/base/text-display/: index.css  index.js
yatta/base/textbox/: index.css  index.js
yatta/client/: App.js  index.html  jsconfig.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js  vite.jupyter.config.js
yatta/client/components/: layout.js
yatta/client/hooks/: useAuth.js  useLocalStorage.js
yatta/client/jupyter/: jupyter.js  jupyter.js.map  style.css
yatta/client/pages/: annotate.js  error.js  login.js  root.js
yatta/client/scss/: form.module.scss  global.scss
yatta/client/src/: App.svelte  app.css  jupyter.js
yatta/client/src/lib/: api.js  model.js  stores.js
yatta/client/src/lib/components/: AnnotateWrapper.svelte  Protected.svelte  task.svelte
yatta/client/src/lib/pages/: annotate.svelte  error404.svelte  home.svelte  login.svelte  logout.svelte  register.svelte
yatta/client/src/routes/: +page.svelte
yatta/client/src/routes/annotate/[datum_id]/: +page.js  +page.svelte
yatta/client/src/routes/login/: +page.svelte
yatta/client/src/routes/register/: +page.svelte
yatta/config/: __internal.py  default.py
yatta/core/: __init__.py  app.py  db.py  models.py  plugins.py
yatta/dataset/: dsv.py
yatta/distributor/: __init__.py
yatta/jupyter/: widget.py
yatta/ordering/: __init__.py  server.py
yatta/server/: app.py  auth.py  core.py  db.py  dev.py  models.py  plugins.py  settings.py
yatta/web/: __init__.py  api.py  auth.py  dev.py  server.py
