[tool.poetry]
name = "yatta-tool"
version = "0.3.1"
description = ""
authors = ["Naitian Zhou <naitian@naitian.org>"]
readme = "README.md"
include = ["yatta/client/dist/**/*"]
packages = [
  { include = "yatta" },
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
click = "^8.1.7"
sqlmodel = "^0.0.16"
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
werkzeug = "^3.0.2"
tqdm = "^4.66.2"
quart = "^0.19.5"
numpy = "^1.26.4"
pandas = "^2.2.2"
baize = "^0.20.8"
hypercorn = "^0.17.3"
anywidget = "^0.9.13"
jupyter = "^1.1.1"
notebook = "^7.2.2"
quart-schema = "^0.20.0"
quart-auth = "^0.10.1"

[tool.poetry.scripts]
yatta = "yatta.cli:cli"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]